--- a/docs/migration/1-to-2.md
+++ b/docs/migration/1-to-2.md
@@ -1,9 +1,9 @@
 # Migration guide
 
-TODO: finish migration section
-
 ## From v1.x to v2.x
 
-### Package installation
+Install the `v2.x` package, no additional steps needed.
 
 ### Handle Breaking Changes
+
+1. Rename any usage of `internalCache` to `cacheInMemory`
