refactor: no more default export as class api

--- a/docs/migration/1-to-2.md
+++ b/docs/migration/1-to-2.md
@@ -6,4 +6,12 @@ Install the `v2.x` package, no additional steps needed.
 
 ### Handle Breaking Changes
 
-1. Rename any usage of `internalCache` to `cacheInMemory`
+1. Update any default import from:
+   ```ts
+   import RestClient from "scarlett"
+   ```
+   ...to a named import:
+   ```ts
+   import { RestClient } from "scarlett"
+   ```
+2. Rename any usage of `internalCache` to `cacheInMemory`
